Atualizar o index.html

--- a/voceacademia/index.html
+++ b/voceacademia/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="perguntas" id="pergunta7">
-            <h3>Seu amigo(a) ta desmotivado e não que treinar, você...</h3>
+            <h3>Seu amigo(a) ta desmotivado e não quer treinar, você...</h3>
             <div class="resposta">
                 <div onclick="quiz('pergunta7','pergunta8'), ponto(3)">Deixa ele e vai sozinho(a)</div>
                 <div onclick="quiz('pergunta7','pergunta8'), ponto(0)">Não vai treinar também</div>
